--- a/styles/common.css
+++ b/styles/common.css
@@ -1,37 +1,122 @@
-#pageHeading {
-  /* logo css*/
+/* Set a style for all elements inside the header i.e. Sign Up button, Sign In button,
+the title "ScriBBler" & the sub-heading below "ScriBBLer" */
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 10px;
+}
+
+.title-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.blue-button {
+  background-color: blue;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 12px;
+  padding-left: 12px;
+  color: white;
+  font-family: "Ubuntu Condensed";
+  font-size: 14px;
+}
+
+.title {
   font-family: "Montez", cursive;
-  font-size: 50px;
-  color: #112fb4;
-  margin: auto;
-  text-decoration: none;
-  margin: 10px 10px 0px 10px;
+  font-size: 30px;
+  color: blue;
+  margin: 0;
 }
 
-.smaller-heading {
-  /*sub heading css*/
-  font-family: "Dosis", sans-serif;
-  font-size: 22px;
-  margin-left: 10px;
+.sub-title {
+  font-family: "Ubuntu Mono", monospace;
+  font-size: 10;
+  color: black;
+  margin: 0;
 }
 
-.modal-signin-container {
-  /*container signin css*/
-  border: 10px solid white;
-}
-
-.signinbutton {
-  /*sign-in button css*/
-  width: 120px;
+.login-buttons-container {
   padding: 10px;
-  border-radius: 2px;
-  cursor: pointer;
-  font-weight: 500;
-  font-size: 90%;
-  background: #0000ff;
-  color: #fff;
-  float: right;
+}
 
-  margin: 10px 10px 0px 0px;
-  font-family: Arial, Helvetica, sans-serif;
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  justify-content: center;
+  align-items: center;
+  color: black;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+input {
+  padding: 10px;
+  outline: none;
+  font-family: Abel;
+}
+
+.label-text {
+  font-weight: bold;
+  margin: auto;
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 40%;
+}
+
+.modal-head {
+  display: flex;
+  flex-direction: column;
+}
+
+.close {
+  display: flex;
+  align-self: flex-end;
+  cursor: pointer;
+}
+
+.modal-title {
+  align-self: center;
+  font-family: Abel;
+}
+
+.signin-btn {
+  background-color: green;
+  padding: 10px;
+  border: none;
+  color: #fff;
+  font-size: 16px;
+  margin-top: 20px;
+  cursor: pointer;
+  font-family: Abel;
+}
+
+.signup {
+  color: blue;
+  font-weight: bolder;
+  margin-left: 10px;
+  cursor: pointer;
+  font-family: Abel;
+}
+
+.bottom-banner {
+  font-family: Abel;
 }
