--- a/styles/index.css
+++ b/styles/index.css
@@ -1,29 +1,62 @@
-.filler-post {
+html {
+  height: 100%;
+  width: 100%;
+}
+body {
+  background-image: url("../images/background.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center center;
+  background-size: cover;
+  margin: 0 !important;
+  background-size: 100% cover !important;
+  overflow: hidden;
+  display: block;
+  height: 100%;
+}
+#main-container-div {
   display: flex;
-  height: 100vh;
+  flex-direction: column;
+  justify-content: flex-start;
+  height: 100%;
+  width: 100%;
+}
+.yellow-button {
+  background-color: rgba(240, 230, 88, 0.925);
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-right: 10px;
+  padding-left: 10px;
+  color: black;
+  font-family: "Ubuntu Condensed";
+  font-size: 14px;
+  margin-left: 10px;
+}
+.postButtons {
+  display: flex;
+  height: 100%;
+  width: 100%;
   justify-content: center;
   align-items: center;
 }
-
-.pstbtn {
-  height: 50px;
-  width: 160px;
-  padding: 10px;
-  border-radius: 2px;
-
-  cursor: pointer;
-  font-weight: 500;
-  font-size: 100%;
-  float: center;
-  font-family: Arial, Helvetica, sans-serif;
-  background: #dab641;
-  margin: 10px 10px 0px 0px;
-  color: black;
+textarea {
+  margin-top: 10px;
 }
-
-body {
-  background-repeat: no-repeat;
-  background-image: url("../images/background.jpg");
-  background-size: cover;
-  background-attachment: fixed;
+.create-btn {
+  margin-top: 10px;
+  background-color: green;
+  font-size: 14px;
+  width: 100px;
+  color: white;
+  padding: 10px;
+  align-self: center;
+  font-family: Abel;
+}
+.post-modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  height: 70%;
 }
