--- a/styles/common.css
+++ b/styles/common.css
@@ -65,13 +65,17 @@ form {
 
 input {
   padding: 10px;
-  outline: none;
+  border: none;
+  background-color: rgb(245, 243, 243);
   font-family: Abel;
 }
 
 .label-text {
-  font-weight: bold;
-  margin: auto;
+  font-weight: normal;
+  color: rgb(41, 40, 40);
+  align-self: left;
+  padding-bottom: 5px;
+  padding-top: 10px;
 }
 
 .modal-content {
@@ -79,7 +83,7 @@ input {
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 40%;
+  width: 20%;
 }
 
 .modal-head {
@@ -94,8 +98,12 @@ input {
 }
 
 .modal-title {
-  align-self: center;
-  font-family: Abel;
+  align-self: left;
+  font-family: "Poppins", sans-serif;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  font-weight: lighter;
+  color: #888;
 }
 
 .signin-btn {
@@ -119,4 +127,5 @@ input {
 
 .bottom-banner {
   font-family: Abel;
+  text-align: center;
 }
