--- a/styles/index.css
+++ b/styles/index.css
@@ -22,7 +22,7 @@ body {
   width: 100%;
 }
 .yellow-button {
-  background-color: rgba(240, 230, 88, 0.925);
+  background-color: rgba(238, 227, 71, 0.925);
   padding-top: 6px;
   padding-bottom: 6px;
   padding-right: 10px;
@@ -41,6 +41,9 @@ body {
 }
 textarea {
   margin-top: 10px;
+  background-color: rgb(245, 243, 243);
+  border: none;
+  text-indent: 5px;
 }
 .create-btn {
   margin-top: 10px;
@@ -58,7 +61,7 @@ textarea {
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
-  height: 70%;
+  height: auto;
 }
 
 .fa-times {
